--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "file-loader": "^0.9.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.3"
   }
 }
