--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/soaringEveryday/ReactDemoWithWebpack#readme",
   "dependencies": {
     "jquery": "^3.1.1",
+    "moment": "^2.16.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
